fix(PROMPTS): replace input on textarea for examples;

--- a/templates/styles.html
+++ b/templates/styles.html
@@ -9,4 +9,12 @@
         background-position: right 10px top 10px;
         background-size: 16px;
     }
+    textarea.form-control {
+        transition: none !important;
+    }
+    .bootstrap-table .fixed-table-container .table td:not(:last-child),
+    #testResult td:not(:last-child)
+    {
+        vertical-align: top !important;
+    }
 </style>
