fixing config and vertex delete integration call

--- a/templates/config/content.html
+++ b/templates/config/content.html
@@ -1,125 +1,118 @@
-{#{{ data.integrations.append({#}
-{#        'id': 2,#}
-{#        'name': 'vertex_ai',#}
-{#        'is_default': False,#}
-{#        'config': {'name': 'vertex2'}#}
-{#}) }}#}
-{#{{ data.integrations.append({#}
-{#        'id': 23,#}
-{#        'name': 'open_ai',#}
-{#        'is_default': False,#}
-{#        'config': {'name': 'openai1'}#}
-{#}) }}#}
-
-{#{{ data.dict() | tojson }}#}
-{#{{ {'data-data': table_data} | tojson }}#}
-{#{{ table_data | tojson }}#}
-
-
-<Table-Card
-        @register="register"
-        instance_name="table_config"
-        header='Config'
-        :table_attributes="{
+<div class="m-3">
+    <Table-Card
+            @register="register"
+            instance_name="table_config"
+            header='Config'
+            :table_attributes="{
             'data-url': this.$root.build_api_url('prompts', 'config') + '/{{ payload.project.id }}',
             'data-unique-id': null,
             'data-virtual-scroll': false,
             'data-pagination': false,
             'data-side-pagination': 'client'
         }"
-        {#        container_classes="h-100"#}
-        container_classes="my-3"
->
-    <template #actions="{master}">
-        {#        <div class="d-flex justify-content-end">#}
-        {#            <button type="button" class="btn btn-basic btn-icon mr-2" data-toggle="modal"#}
-        {#                    data-target="#{{ modal_id }}">#}
-        {#                <i class="icon__18x18 icon-create-element icon__white"></i>#}
-        {#            </button>#}
-        {#            <button type="button" class="btn btn-secondary btn-icon btn-icon__purple" id="delete_tests"><i#}
-        {#                    class="icon__18x18 icon-delete"></i>#}
-        {#            </button>#}
-        {#        </div>#}
-    </template>
-    <template #table_headers>
-        <th scope="col"
-            data-sortable="true"
-            data-field="key"
-        >
-            Key
-        </th>
-        <th scope="col"
-            data-sortable="true"
-            data-field="value"
-            data-formatter="valueFormatter"
-            data-cell-style="valueCellStyle"
-        >
-            Value
-        </th>
-        <th scope="col" data-align="center"
-            data-field="action"
-            data-formatter="actionFormatter"
-        >
-            Action
-        </th>
-    </template>
+            {#        container_classes="h-100"#}
+            container_classes="my-3 pb-0"
+    >
+        <template #actions="{master}">
+            <div class="d-flex justify-content-end">
+                {#            <button type="button" class="btn btn-basic btn-icon mr-2" data-toggle="modal"#}
+                {#                    data-target="#{{ modal_id }}">#}
+                {#                <i class="icon__18x18 icon-create-element icon__white"></i>#}
+                {#            </button>#}
+                <button type="button" class="btn btn-secondary btn-icon btn-icon__purple"
+                    onclick="copyConfigToClip()"
+                >
+                    <i class="icon__18x18 icon-copy"></i>
+                </button>
+            </div>
+        </template>
+        <template #table_headers>
+            <th scope="col"
+                data-sortable="true"
+                data-field="key"
+            >
+                Key
+            </th>
+            <th scope="col"
+                data-sortable="true"
+                data-field="value"
+                data-formatter="valueFormatter"
+                data-cell-style="tokenCellStyle"
+            >
+                Value
+            </th>
+            <th scope="col" data-align="center"
+                data-field="action"
+                data-formatter="actionFormatter"
+            >
+                Action
+            </th>
+        </template>
 
-</Table-Card>
-
-
-{#<select class="custom-select">#}
-{#    {% for (i_type, integrations) in data.integrations | groupby(attribute='name') %}#}
-{#        <optgroup label="{{ i_type.split('_') | join(' ') }}"></optgroup>#}
-{#        {% for i in integrations %}#}
-{#            <option#}
-{#                value="{{ i['id'] }}"#}
-{#                {% if i['is_default'] %} selected {% endif %}#}
-{#            >#}
-{#                {{ i['config']['name'] }} | id: {{ i['id'] }}#}
-{#            </option>#}
-{#        {% endfor %}#}
-{#    {% endfor %}#}
-{#</select>#}
+    </Table-Card>
 
 
-{#<Table-Card#}
-{#        @register="register"#}
-{#        instance_name="table_bucket"#}
-{##}
-{#        header='Bucket contents'#}
-{#        :adaptive-height="true"#}
-{#        :table_attributes="{#}
+    {#<select class="custom-select">#}
+    {#    {% for (i_type, integrations) in data.integrations | groupby(attribute='name') %}#}
+    {#        <optgroup label="{{ i_type.split('_') | join(' ') }}"></optgroup>#}
+    {#        {% for i in integrations %}#}
+    {#            <option#}
+    {#                value="{{ i['id'] }}"#}
+    {#                {% if i['is_default'] %} selected {% endif %}#}
+    {#            >#}
+    {#                {{ i['config']['name'] }} | id: {{ i['id'] }}#}
+    {#            </option>#}
+    {#        {% endfor %}#}
+    {#    {% endfor %}#}
+    {#</select>#}
+
+    <div class="d-flex">
+        <Table-Card
+                @register="register"
+                instance_name="table_bucket"
+
+                header='Bucket contents'
+                {#        :adaptive-height="true"#}
+                :table_attributes="{
 {#            'data-filter-control': 'true',#}
-{#            'data-url': '/api/v1/artifacts/backend_performance_results/{{ result_id }}/',#}
-{#            'data-pagination': 'true',#}
-{#            'data-page-list': '[10, 15, 20, 50, 100]',#}
-{#            'data-page-size': 20,#}
-{#            'data-side-pagination': 'client',#}
-{#            'data-pagination-parts': ['pageInfo', 'pageList', 'pageSize']#}
-{#        }"#}
-{#        container_classes="card-12"#}
-{#        :borders="true"#}
-{#>#}
-{#    <template #actions="{master}">#}
-{#        <div class="d-flex justify-content-end">#}
-{#            <button type="button" class="btn btn-secondary btn-sm btn-icon__sm mr-2"#}
-{#                    @click="master.table_action('refresh')"#}
-{#            >#}
-{#                <i class="fas fa-sync"></i>#}
-{#            </button>#}
-{#        </div>#}
-{#    </template>#}
-{##}
-{#    <template #table_headers>#}
-{#        <th scope="col" data-sortable="true" data-field="name">Name</th>#}
-{#        <th scope="col" data-sortable="true" data-field="size">Size</th>#}
-{#        <th scope="col" data-sortable="true" data-field="actions"#}
-{#            data-align="right"#}
-{#            data-formatter="downloadArtifactFormatter"#}
-{#        >#}
-{#            Actions#}
-{#        </th>#}
-{#    </template>#}
-{#</Table-Card>#}
+            'data-url': this.$root.build_api_url('prompts', 'config_bucket') + '/{{ payload.project.id }}',
+            'data-pagination': 'true',
+            'data-page-list': '[5, 10, 20, 50]',
+            'data-page-size': 5,
+            'data-side-pagination': 'client',
+            'data-pagination-parts': ['pageInfo', 'pageList', 'pageSize']
+        }"
+                container_classes="flex-grow-1"
+                {#        :borders="true"#}
+        >
+            <template #actions="{master}">
+                <div class="d-flex justify-content-end">
+                    <button type="button" class="btn btn-secondary btn-sm btn-icon__sm mr-2"
+                            @click="master.table_action('refresh')"
+                    >
+                        <i class="fas fa-sync"></i>
+                    </button>
+                </div>
+            </template>
+
+            <template #table_headers>
+                <th scope="col" data-sortable="true" data-field="name">Name</th>
+                <th scope="col" data-sortable="true" data-field="size">Size</th>
+                <th scope="col" data-sortable="true" data-field="actions"
+                    data-align="right"
+                    data-formatter="downloadArtifactFormatter"
+                >
+                    Actions
+                </th>
+            </template>
+        </Table-Card>
+
+        {% if readme %}
+        <div class="card ml-3 p-3 flex-grow-1" style="max-width: 40%">
+            {{ readme | safe }}
+        </div>
+        {% endif %}
+    </div>
 
 
+</div>
