--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -7,6 +7,7 @@
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsRange.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsVertexIntegration.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsOpenaiIntegration.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('prompts.static', filename='js/components/PromptsAzureOpenaiIntegration.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsParams.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsListAside.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsModalCreate.js') }}" type="text/javascript"></script>
