export and import functionality

--- a/templates/content.html
+++ b/templates/content.html
@@ -4,4 +4,6 @@
         instance_name="prompts"
         :integrations="{{ integrations }}">
     </Prompts>
+    <Import-Prompt-Modal>
+    </Import-Prompt-Modal>
 </div>
