--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -2,6 +2,7 @@
 <script src="{{ url_for('prompts.static', filename='js/api/promptsAPI.js') }}"></script>
 <script src="{{ url_for('design-system.static', filename='assets/vendor/nouislider/nouislider.js') }}"></script>
 <script src="{{ url_for('design-system.static', filename='assets/vendor/nouislider/wNumb.min.js') }}"></script>
+<script src="{{ url_for('prompts.static', filename='js/ImportPrompt.js') }}"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsConfirmModal.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsRange.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsVertexIntegration.js') }}" type="text/javascript"></script>
