--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -1,8 +1,12 @@
 <script src="{{ url_for('prompts.static', filename='js/utils/tableEvents.js') }}"></script>
 <script src="{{ url_for('prompts.static', filename='js/api/promptsAPI.js') }}"></script>
+<script src="{{ url_for('design-system.static', filename='assets/js/color-picker/dist/coloris.min.js') }}"></script>
+<script src="{{ url_for('design-system.static', filename='assets/js/bootstrap-tags-master/tags-customized.min.js') }}"></script>
 <script src="{{ url_for('design-system.static', filename='assets/vendor/nouislider/nouislider.js') }}"></script>
 <script src="{{ url_for('design-system.static', filename='assets/vendor/nouislider/wNumb.min.js') }}"></script>
 <script src="{{ url_for('prompts.static', filename='js/ImportPrompt.js') }}"></script>
+
+<script src="{{ url_for('prompts.static', filename='js/components/PromptsTagsModal.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsConfirmModal.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsRange.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsVertexIntegration.js') }}" type="text/javascript"></script>
