--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -15,4 +15,5 @@
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsParams.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsListAside.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsModalCreate.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('prompts.static', filename='js/components/PromptsVersionModalCreate.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/Prompts.js') }}" type="text/javascript"></script>
