feature(PROMPTS): disabled fields for other versions & added description;

--- a/templates/styles.html
+++ b/templates/styles.html
@@ -18,7 +18,13 @@
     {
         vertical-align: top !important;
     }
-    #prompts-aside-table tbody tr td:first-child {
+    #prompts-aside-table tbody tr td:first-child,
+    #promptsParamsTable tbody tr td:first-child {
         vertical-align: middle !important;
     }
+    .need-disabled button,
+    .need-disabled textarea {
+
+    }
+
 </style>
