feature(PROMPTS-Filter): Added filter by tags and prompt name;

--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -6,6 +6,7 @@
 <script src="{{ url_for('design-system.static', filename='assets/vendor/nouislider/wNumb.min.js') }}"></script>
 <script src="{{ url_for('prompts.static', filename='js/ImportPrompt.js') }}"></script>
 
+<script src="{{ url_for('prompts.static', filename='js/components/PromptsTagsFilter.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsTagsModal.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsConfirmModal.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsRange.js') }}" type="text/javascript"></script>
