filter models by type & multimessaging

--- a/templates/content.html
+++ b/templates/content.html
@@ -2,7 +2,7 @@
     <Prompts
         @register="register"
         instance_name="prompts"
-        :integrations="{{ integrations }}">
+        :integrations='{{ integrations|tojson }}'>
     </Prompts>
     <Import-Prompt-Modal>
     </Import-Prompt-Modal>
