feature(CHAT): added chat template;

--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -9,6 +9,8 @@
 
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsEditorName.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsEditorField.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('prompts.static', filename='js/components/PromptFreeform.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('prompts.static', filename='js/components/PromptChat.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsTagsFilter.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsTagsModal.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('prompts.static', filename='js/components/PromptsConfirmModal.js') }}" type="text/javascript"></script>
