--- a/templates/styles.html
+++ b/templates/styles.html
@@ -36,4 +36,29 @@
     #prompts-aside-table tr:hover {
         cursor: pointer;
     }
+    .prompt-chat {
+        padding: 10px;
+        overflow: scroll;
+        height: 200px;
+        border: solid 1px var(--gray400);
+        border-radius: 4px;
+    }
+    .prompt-chat:focus-visible {
+        outline: none;
+        border: solid 1px var(--gray400);
+    }
+    .prompt-message, .prompt-message:focus-visible {
+        border: none;
+        outline: none;
+        text-indent: 10px;
+    }
+    .prompt-input {
+        border: solid 1px var(--gray400);
+        border-radius: 4px;
+        padding: 4px;
+    }
+    .prompt-message::placeholder {
+        color: #ABB3B9;
+        padding: 4px 4px 4px 4px;
+    }
 </style>
