--- a/templates/styles.html
+++ b/templates/styles.html
@@ -61,4 +61,11 @@
         color: #ABB3B9;
         padding: 4px 4px 4px 4px;
     }
+    .icon-chatting {
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        background-color: #CAD1D7;
+    }
 </style>
