feature(CHAT): fixed bugs;

--- a/templates/styles.html
+++ b/templates/styles.html
@@ -68,4 +68,7 @@
         cursor: pointer;
         background-color: #CAD1D7;
     }
+    .container-scroll {
+        overflow: scroll;
+    }
 </style>
