--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -1,5 +1,6 @@
 <script src="{{ url_for('prompts.static', filename='js/utils/tableEvents.js') }}"></script>
 <script src="{{ url_for('design-system.static', filename='assets/vendor/lodash/lodash4.17.21.js') }}"></script>
+<script src="{{ url_for('design-system.static', filename='assets/vendor/markdown-parser/showdown-editor.1.9.0.js') }}"></script>
 <script src="{{ url_for('prompts.static', filename='js/api/promptsAPI.js') }}"></script>
 <script src="{{ url_for('design-system.static', filename='assets/js/color-picker/dist/coloris.min.js') }}"></script>
 <script src="{{ url_for('design-system.static', filename='assets/js/bootstrap-tags-master/tags-customized.min.js') }}"></script>
