feature(PROMPTS): toggle for context and fix embedding;

--- a/templates/styles.html
+++ b/templates/styles.html
@@ -76,4 +76,9 @@
     .container-scroll::-webkit-scrollbar {
         display: none;
     }
+    table .prompt-chat p {
+        margin-bottom: 0!important;
+        color: var(--gray800);
+        font-size: 14px;
+    }
 </style>
