bugfix: model encoding errors feature: extended MODEL_TOKENS_MAPPER feature: markdownParser markdownit feature: md-table css for markdowned tables

--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -1,6 +1,7 @@
+<script src="https://cdn.jsdelivr.net/npm/markdown-it@13.0.2/dist/markdown-it.min.js"></script>
 <script src="{{ url_for('prompts.static', filename='js/utils/tableEvents.js') }}"></script>
 <script src="{{ url_for('design-system.static', filename='assets/vendor/lodash/lodash4.17.21.js') }}"></script>
-<script src="{{ url_for('design-system.static', filename='assets/vendor/markdown-parser/showdown-editor.1.9.0.js') }}"></script>
+{#<script src="{{ url_for('design-system.static', filename='assets/vendor/markdown-parser/showdown-editor.1.9.0.js') }}"></script>#}
 <script src="{{ url_for('prompts.static', filename='js/api/promptsAPI.js') }}"></script>
 <script src="{{ url_for('design-system.static', filename='assets/js/color-picker/dist/coloris.min.js') }}"></script>
 <script src="{{ url_for('design-system.static', filename='assets/js/bootstrap-tags-master/tags-customized.min.js') }}"></script>
