--- a/templates/styles.html
+++ b/templates/styles.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="{{ url_for('prompts.static', filename='css/md-table.css') }}" />
 <link rel="stylesheet" href="{{ url_for('design-system.static', filename='assets/js/color-picker/dist/coloris.min.css') }}" />
 <style>
     .bootstrap-table .fixed-table-container .fixed-table-body {
